# ML-LABS

./: .gitignore  README.md
chess quant v2/chessquant-ml-labs-v2/chessquant-ml-labs-v2/production_handoff/chessquant_prod_handoff/: .env.example  handoff_inventory.txt  pyproject.toml
chess quant v2/chessquant-ml-labs-v2/chessquant-ml-labs-v2/production_handoff/chessquant_prod_handoff/artifacts/: training_summary.json
chess quant v2/chessquant-ml-labs-v2/chessquant-ml-labs-v2/production_handoff/chessquant_prod_handoff/code/chessquant_ml/: settings.py
chess quant v2/chessquant-ml-labs-v2/chessquant-ml-labs-v2/production_handoff/chessquant_prod_handoff/code/chessquant_ml/cli/: main.py
chess quant v2/chessquant_ml_research_sandbox_v2/chessquant_ml_research_sandbox_v2/: README.md  pyproject.toml
chess quant v2/chessquant_ml_research_sandbox_v2/chessquant_ml_research_sandbox_v2/configs/experiments/: future_drawdown_xgb.yaml  future_upside_xgb.yaml  meaningful_upside_xgb.yaml  peak_binary_xgb.yaml
chess quant v2/chessquant_ml_research_sandbox_v2/chessquant_ml_research_sandbox_v2/configs/policies/: aggressive.yaml  balanced.yaml  conservative.yaml
chess quant v2/chessquant_ml_research_sandbox_v2/chessquant_ml_research_sandbox_v2/data/features/: Matumnich_features_research.parquet
chess quant v2/chessquant_ml_research_sandbox_v2/chessquant_ml_research_sandbox_v2/docs/: REPO_LAYOUT.md  START_HERE.md  pyproject_patch.md
chess quant v2/chessquant_ml_research_sandbox_v2/chessquant_ml_research_sandbox_v2/outputs/models/: latest
chess quant v2/chessquant_ml_research_sandbox_v2/chessquant_ml_research_sandbox_v2/outputs/reports/policy_report_peak/: policy_report_summary.json
chess quant v2/chessquant_ml_research_sandbox_v2/chessquant_ml_research_sandbox_v2/scripts/: refactor_to_src_layout.ps1  refactor_to_src_layout.sh  run_matrix.ps1
chess quant v2/chessquant_ml_research_sandbox_v2/chessquant_ml_research_sandbox_v2/src/chessquant_ml/data/: splitter.py
chess quant v2/chessquant_ml_research_sandbox_v2/chessquant_ml_research_sandbox_v2/src/chessquant_ml/lab/: backtester.py  plots.py  policy.py  viz.py
(+152 files in other folders)
